--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -22,7 +22,7 @@
         <scene sceneID="16">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="15" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="" title="Detail" id="4" customClass="ZPDetailedItemListViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="" title="Detail" id="4" customClass="ZPItemListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="26">
                         <rect key="frame" x="0.0" y="64" width="703" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -172,26 +172,43 @@
                                 <rect key="frame" x="0.0" y="660" width="703" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem title="Author" width="66" id="1Dk-lf-vga">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="OMk-a8-UjJ"/>
+                                    <barButtonItem title="Tap to set sort" id="jT6-gW-USA">
                                         <connections>
-                                            <action selector="doSortCreator:" destination="4" id="C3Z-aG-IoP"/>
+                                            <action selector="sortButtonPressed:" destination="4" id="sqJ-Ra-Kgi"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Year" id="nWL-aZ-3id">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="tND-Fm-Z3F"/>
+                                    <barButtonItem title="Tap to set sort" id="Lew-aD-Cbs">
                                         <connections>
-                                            <action selector="doSortDate:" destination="4" id="uFs-CE-oJ4"/>
+                                            <action selector="sortButtonPressed:" destination="4" id="dBy-ve-fVe"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Title" id="F5T-vd-Ge8">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9u6-lA-e4v"/>
+                                    <barButtonItem title="Tap to set sort" id="bhi-Y7-ndK">
                                         <connections>
-                                            <action selector="doSortTitle:" destination="4" id="0TE-mM-WJ9"/>
+                                            <action selector="sortButtonPressed:" destination="4" id="jQF-EO-16G"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Publication" id="NSc-4V-elU">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ozg-M8-PMq"/>
+                                    <barButtonItem title="Tap to set sort" id="dIg-Fc-Pdw">
                                         <connections>
-                                            <action selector="doSortPublication:" destination="4" id="r3f-LP-RFZ"/>
+                                            <action selector="sortButtonPressed:" destination="4" id="QHu-GW-sa5"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="0VQ-x4-Zln"/>
+                                    <barButtonItem title="Tap to set sort" id="FGQ-rZ-5Eo">
+                                        <connections>
+                                            <action selector="sortButtonPressed:" destination="4" id="pfw-6V-gcW"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="VB9-qP-Rsq"/>
+                                    <barButtonItem title="Tap to set sort" id="4FN-EY-dfc">
+                                        <connections>
+                                            <action selector="sortButtonPressed:" destination="4" id="Gwi-T7-Diy"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="M49-jf-aF2"/>
                                 </items>
                             </toolbar>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" style="gray" id="F9a-sh-YVw">
@@ -501,6 +518,41 @@
             <point key="canvasLocation" x="-390" y="686"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="TTStyledTextLabel" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TTStyledTextLabel.h"/>
+        </class>
+        <class className="ZPAuthenticationDialog" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAuthenticationDialog.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="ZPItemDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="carousel" candidateClass="iCarousel"/>
+                <relationship kind="outlet" name="detailTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="ZPItemListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="sortButtonPressed:"/>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+            </relationships>
+        </class>
+        <class className="ZPLibraryAndCollectionListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLibraryAndCollectionListViewController.h"/>
+        </class>
+        <class className="iCarousel" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/iCarousel.h"/>
+            <relationships>
+                <relationship kind="outlet" name="dataSource"/>
+                <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
